minor bug fix for wrong margin left value for every 5th element in the list.

--- a/clients/youtube_producer/styles/yt-responsive.styl
+++ b/clients/youtube_producer/styles/yt-responsive.styl
@@ -353,9 +353,6 @@
             margin-left: 30px;
         }
         &:nth-child(4n+1) {
-            margin-left: 30px;
-        }
-        &:nth-child(5n+1) {
             margin-left: 130px;
         }
     }
